# vecalex

./: LICENSE  README.md  justfile  pyproject.toml
scripts/: partition_hf_entity_embeddings.py
src/vecalex/: __init__.py  config.py  hf_embeddings.py  scope.py  vecalex.py
tests/: __init__.py  test_hf_embeddings.py  test_vecalex.py
